--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,16 @@
   </head>
 
   <body>
+    <div class="container">
+    <nav>
+      <ul class="nav navbar-nav navbar-right">
+
+        <li><%= link_to "Home",   root_path %></li>
+        
+        <li><%= link_to "Help", static_pages_help_path %></li>
+      </ul>
+    </nav>
+  </div>
     <%= yield %>
   </body>
 </html>
