Add custo helpers /webtitle/

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>FilmwebApp</title>
+    <title><%= yield(:title) %> | FilmwebApp</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -14,7 +14,6 @@
       <ul class="nav navbar-nav navbar-right">
 
         <li><%= link_to "Home",   root_path %></li>
-        
         <li><%= link_to "Help", static_pages_help_path %></li>
       </ul>
     </nav>
