--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,12 +1,12 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<% provide(:title, "Home") %>
+<h1>Home</h1>
+<p>Czakurina</p>
 
 <div class="containerHome">
 <nav>
   <ul class="nav navbar-nav navbar-right">
 
     <li><%= link_to "User",   users_path %></li>
-
     <li><%= link_to "Reviews", review_posts_path%></li>
   </ul>
 </nav>
