Change help page

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,4 +1,6 @@
 <% provide(:title, "Help") %>
 
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<h1>That is a help page</h1>
+<p>We'd love to help, but we don't know how :(</p>
+
+<p> TOO BAD <p>
