Add several html content /header/

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,13 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+
   </head>
 
   <body>
+
+    <header class="navbar navbar-fixed-top navbar-inverse">
     <div class="container">
     <nav>
       <ul class="nav navbar-nav navbar-right">
@@ -19,6 +23,9 @@
       </ul>
     </nav>
   </div>
+</header>
+<div clas="container">
     <%= yield %>
+  </div>
   </body>
 </html>
