--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
 
     <header class="navbar navbar-fixed-top navbar-inverse">
     <div class="container">
+      <%= link_to "Yay", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
 
