--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,4 +12,91 @@
  *
  *= require_tree .
  *= require_self
- */
+
+ /* universal */
+
+ body {
+   padding-top: 60px;
+ }
+
+ section {
+   overflow: auto;
+ }
+
+ textarea {
+   resize: vertical;
+ }
+
+ .center {
+   text-align: center;
+ }
+
+ .center h1{
+   margin-bottom: 10px;
+ }
+
+ /* typography */
+
+ h1, h2, h3, h4, h5, h6 {
+   line-height: 1;
+ }
+
+ h1 {
+   font-size: 3em;
+   letter-spacing: -2px;
+   margin-bottom: 30px;
+   text-align: center;
+ }
+
+ h3 {
+   font-size: 1.2em;
+   letter-spacing: -1px;
+   margin-bottom: 30px;
+   text-align: center;
+   font-weight: normal;
+   color: #777;
+ }
+
+ p {
+   font-size: 1.1em;
+   line-height: 1.7em;
+   text-align: center;
+ }
+
+div {
+  margin: 10px;
+}
+ /* header */
+
+#logo {
+  float: left;
+  margin-right: 10px;
+  font-size: 1.7em;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  padding-top: 9px;
+  font-weight: bold;
+}
+
+#logo:hover {
+  color: #fff;
+  text-decoration: none;
+}
+/* body */
+.nav-main{
+
+}
+.btn-secondary{
+
+}
+
+
+/* footer */
+.image-foot-link {
+  margin-left: : 20px;
+  float: right;
+}
+#rails-img {
+  float:right;
+}
