--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,13 +1,20 @@
 <% provide(:title, "Home") %>
-<h1>Home</h1>
-<p>Czakurina</p>
 
-<div class="containerHome">
+<div class "center-jumbotron">
+<h1>FilmComunity</h1>
+<h3>And now  we can say, that is a sweet homepage, DUDE! </h3>
+
 <nav>
-  <ul class="nav navbar-nav navbar-right">
+  <ul class="nav navbar-nav navbar-center nav-main">
 
-    <li><%= link_to "User",   users_path %></li>
-    <li><%= link_to "Reviews", review_posts_path%></li>
+    <li class="main-menu"><%= link_to "User",   users_path , class: " btn btn-lg btn-secondary"%></li>
+    <li class="main-menu"><%= link_to "Reviews", review_posts_path, class: "btn btn-lg btn-secondary"%></li>
   </ul>
 </nav>
+</div>
+</div class = "image-foot-link" id="rails-img">
+
+
+ <%= link_to image_tag("rails.png", alt: "Rails logo"),
+             'http://rubyonrails.org/' %>
 </div>
