--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,17 +4,12 @@
 <h1>FilmComunity</h1>
 <h3>And now  we can say, that is a sweet homepage, DUDE! </h3>
 
-<nav>
-  <ul class="nav navbar-nav navbar-center nav-main">
-
-    <li class="main-menu"><%= link_to "User",   users_path , class: " btn btn-lg btn-secondary"%></li>
+<!-- <nav class="nav-home"> -->
+  <!-- <ul class="nav navbar-nav navbar-center nav-main"> -->
+<%= link_to "User",   users_path , class: " btn btn-lg  btn-secondary"%>
+<%= link_to "Reviews", review_posts_path, class: "btn btn-lg  btn-secondary"%>
+    <!-- <li class="main-menu"><%= link_to "User",   users_path , class: " btn btn-lg btn-secondary"%></li>
     <li class="main-menu"><%= link_to "Reviews", review_posts_path, class: "btn btn-lg btn-secondary"%></li>
-  </ul>
-</nav>
-</div>
-</div class = "image-foot-link" id="rails-img">
-
-
- <%= link_to image_tag("rails.png", alt: "Rails logo"),
-             'http://rubyonrails.org/' %>
+  </ul> -->
+<!-- </nav> -->
 </div>
