--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,7 +12,6 @@
  *
  *= require_tree .
  *= require_self
-
  /* universal */
 
  body {
@@ -63,12 +62,14 @@
    text-align: center;
  }
 
-div {
+ div {
   margin: 10px;
-}
+  align-content: center;
+ }
+
  /* header */
 
-#logo {
+ #logo {
   float: left;
   margin-right: 10px;
   font-size: 1.7em;
@@ -77,26 +78,51 @@ div {
   letter-spacing: -1px;
   padding-top: 9px;
   font-weight: bold;
-}
+ }
 
-#logo:hover {
+ #logo:hover {
   color: #fff;
   text-decoration: none;
-}
-/* body */
-.nav-main{
+ }
+ /* body */
 
-}
-.btn-secondary{
+ .btn-secondary{
+  margin: 10px;
+  align-self: center;
+ }
 
-}
+ .nav-home{
+   align-content: center;
+ }
 
 
-/* footer */
-.image-foot-link {
-  margin-left: : 20px;
-  float: right;
-}
-#rails-img {
-  float:right;
-}
+ /* footer */
+
+ footer {
+   margin-top: 45px;
+   padding-top: 5px;
+   border-top: 1px solid #eaeaea;
+   color: #777;
+ }
+
+ footer a {
+   color: #555;
+ }
+
+ footer a:hover {
+   color: #222;
+ }
+
+ footer small {
+   float: left;
+ }
+
+ footer ul {
+   float: right;
+   list-style: none;
+ }
+
+ footer ul li {
+   float: left;
+   margin-left: 15px;
+ }
