--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,15 +7,15 @@
 
 <footer class="footer">
   <small>
-    Made by <a href="http://github.com/nejcik"> nejt </a> based on
-    The <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-    by <a href="http://www.michaelhartl.com/">Michael Hartl</a>
+    Made by <a href="http://github.com/nejcik" target="_blank"> nejt </a> based on
+    The <a href="http://www.railstutorial.org/" target="_blank">Ruby on Rails Tutorial</a>
+    by <a href="http://www.michaelhartl.com/" target="_blank">Michael Hartl</a>
   </small>
   <nav>
     <ul>
       <li><%= link_to "About",   '#' %></li>
       <li><%= link_to "Contact", '#' %></li>
-      <li><a href="http://news.railstutorial.org/">News</a></li>
+      <li><a href="http://news.railstutorial.org/",target="_blank">News</a></li>
     </ul>
   </nav>
 
