added About page

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
 <div class="container">
-  <%= link_to "Yay", root_path, id: "logo" %>
+  <%= link_to "Co tu napisac zeby nie wygladalo lamersko?", root_path, id: "logo" %>
 <nav>
   <ul class="nav navbar-nav navbar-right">
 
