--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -13,8 +13,8 @@
   </small>
   <nav>
     <ul>
-      <li><%= link_to "About",   '#' %></li>
-      <li><%= link_to "Contact", '#' %></li>
+      <li><%= link_to "About",   static_pages_about_path %></li>
+
       <li><a href="http://news.railstutorial.org/",target="_blank">News</a></li>
     </ul>
   </nav>
