--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -15,7 +15,7 @@
     <ul>
       <li><%= link_to "About",   static_pages_about_path %></li>
 
-      <li><a href="http://news.railstutorial.org/",target="_blank">News</a></li>
+      <li><a href="http://news.railstutorial.org/"target="_blank">News</a></li>
     </ul>
   </nav>
 
