--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,15 +1,16 @@
 <% provide(:title, "Home") %>
 
-<div class "center-jumbotron">
-<h1>FilmComunity</h1>
-<h3>And now  we can say, that is a sweet homepage, DUDE! </h3>
+<div class= "center jumbotron">
+	<h1>MovieMinute Comunity</h1>
 
-<!-- <nav class="nav-home"> -->
-  <!-- <ul class="nav navbar-nav navbar-center nav-main"> -->
-<%= link_to "User",   users_path , class: " btn btn-lg  btn-secondary"%>
-<%= link_to "Reviews", review_posts_path, class: "btn btn-lg  btn-secondary"%>
-    <!-- <li class="main-menu"><%= link_to "User",   users_path , class: " btn btn-lg btn-secondary"%></li>
-    <li class="main-menu"><%= link_to "Reviews", review_posts_path, class: "btn btn-lg btn-secondary"%></li>
-  </ul> -->
-<!-- </nav> -->
+	<h3>And now  we can say, that is a sweet homepage, DUDE! </h3>
+
+	<h3>Welcome to our MovieMinute Community! Place, where ou can keep your thoughts about every moments from movies which moved your soul :D </h3>
+
+
+  <%= link_to "SIGN UP",   users_path , class: " btn btn-lg btn-default"%>
+
+
+<!--<%= link_to "User",   users_path , class: " btn btn-lg  "%>
+<%= link_to "Reviews", review_posts_path, class: "btn btn-lg "%>-->
 </div>
