--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,15 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
 <div class="container">
-  <%= link_to "Co tu napisac zeby nie wygladalo lamersko?", root_path, id: "logo" %>
+  <%= link_to "Movie minute", root_path, id: "logo" %>
 <nav>
   <ul class="nav navbar-nav navbar-right">
-
-    <li><%= link_to "Home",   root_path %></li>
+	<li><a href="#">Log in</a></li>
+    <li><%= link_to "See Users",   users_path %></li>
+    <li><%= link_to "See Review posts", review_posts_path %></li>
+   <!--  <li><%= link_to "Home",   root_path %></li> -->
     <li><%= link_to "Help", static_pages_help_path %></li>
   </ul>
 </nav>
 </div>
 </header>
+<!--navbar-inverse-->
