Change path for sign up [new_user_path]

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,7 +8,7 @@
 	<h3>Welcome to our MovieMinute Community! Place, where ou can keep your thoughts about every moments from movies which moved your soul :D </h3>
 
 
-  <%= link_to "SIGN UP",   users_path , class: " btn btn-lg btn-default"%>
+  <%= link_to "SIGN UP",   new_user_path , class: " btn btn-lg btn-default"%>
 
 
 <!--<%= link_to "User",   users_path , class: " btn btn-lg  "%>
