--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,7 @@
 </div class = "image-foot-link" id="rails-img">
 
-
  <%= link_to image_tag("rails.png", alt: "Rails logo"),
-             'http://rubyonrails.org/'%>
+             'http://rubyonrails.org/', class: "img-thumbnail img-footer" %>
 </div>
 
 <footer class="footer">
@@ -18,5 +17,5 @@
       <li><a href="http://news.railstutorial.org/"target="_blank">News</a></li>
     </ul>
   </nav>
-
 </footer>
+
