--- a/app/views/review_posts/show.html.erb
+++ b/app/views/review_posts/show.html.erb
@@ -2,17 +2,17 @@
 
 <p id="notice"><%= notice %></p>
 
-<p>
+<h4>
   <strong>Title:</strong>
   <%= @review_post.title %>
-</p>
+</h4>
 
-<p>
+<p class = "text-justify">
   <strong>Content:</strong>
   <%= @review_post.content %>
 </p>
 
-<p>
+<p class = "text-justify">>
   <strong>User:</strong>
   <%= @review_post.user_id %>
 </p>
