--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,9 +2,14 @@
 
 <p id="notice"><%= notice %></p>
 
+<div class = "jumbotron">
 <h1>Users</h1>
+<br>
 
-<table>
+<%= link_to 'New User', new_user_path , class: "center"%>
+
+
+<table class = "table" >
   <thead>
     <tr>
       <th>Name</th>
@@ -25,7 +30,5 @@
     <% end %>
   </tbody>
 </table>
+</div>
 
-<br>
-
-<%= link_to 'New User', new_user_path %>
