--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,17 +1,19 @@
 <%= form_with(model: user, local: true) do |form| %>
-  <% if user.errors.any? %>
+<!--   <% if user.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
-
+      <div class= "alert alert-danger"
+        <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
+      </div>
       <ul>
       <% user.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
     </div>
-  <% end %>
+  <% end %> -->
+  <%= render 'shared/error_messages' %>
 
-  <div class="field">
+ <!--  <div class="field">
     <%= form.label :name %>
     <%= form.text_field :name, id: :user_name %>
   </div>
@@ -23,5 +25,26 @@
 
   <div class="actions">
     <%= form.submit %>
+  </div> -->
+<!-- <% end %> -->
+
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_for(@user) do |f| %>
+      <%= f.label :name %>
+      <%= f.text_field :name, class: "form-control"%>
+
+      <%= f.label :email %>
+      <%= f.email_field :email, class: "form-control" %>
+
+      <%= f.label :password %>
+      <%= f.password_field :password, class: "form-control" %>
+
+      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.password_field :password_confirmation, class: "form-control" %>
+
+      <%= f.submit "Create my account", class: "actions btn btn-primary" %>
+    <% end %>
   </div>
-<% end %>
+</div>
+
