--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with(model: user, local: true) do |form| %>
-<!--   <% if user.errors.any? %>
+  <% if user.errors.any? %>
     <div id="error_explanation">
       <div class= "alert alert-danger"
         <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
@@ -10,8 +10,8 @@
       <% end %>
       </ul>
     </div>
-  <% end %> -->
-  <%= render 'shared/error_messages' %>
+  <% end %>
+<!--   <%= render 'shared/error_messages' %> -->
 
  <!--  <div class="field">
     <%= form.label :name %>
